--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,14 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
+.bigCounter div{
+
+    display: inline-block;
+    font-size: 60px;
+    line-height: 60px;
+    background: black;
+    color: white;
+    padding: 20px;
+}
 /* 
 
     You can write your own styles here...
